FBINTF Change Log  version                                                 (1.1-1) Tue, 27 Feb 2018 16:51:16 +0000

1. IBUtils.QuoteIdentifierIfNeeded: Add check for space character.

2. IAttachment: add two new methods
     function HasDefaultCharSet: boolean;
     function GetDefaultCharSetID: integer;

   These return, respectively, true if a connection default character set was
   specified and the character set id of the connection default character set.
   The DefaultCharSetID is cached when the connection is opened and hence does not
   require a database lookup.

3. Avoid exception when a text blob is a stored procedure parameter.

4. Update test suite to include a test for a stored proc returning a text blob.

5. IAttachment: add
      function GetRemoteProtocol: AnsiString;
      function GetODSMajorVersion: integer;
      function GetODSMinorVersion: integer;
      function GetAuthenticationMethod: AnsiString;

   These results are cached when the connection is opened and hence do not
   require a database lookup.

6. IAttachment: add "function GetConnectString: AnsiString;" This returns the
   connect string used to create/connect to the database.

7. IAttachment: Create Database using SQL statement. The username and password
   are now extracted and used to populate a DPB made available via IAttachment.getDPB.
   It is now possible to use IAttachment disconnect/connect to reconnect to
   a database for which the initial connection was established by a create
   database sql statement. Available in FPC only.

8. Update Test 1 to test 5, 6 and 7 above.

9. IBUtils code tidy up.

10. Parameter Block interfaces "find" method. As documented, this should have
   returned a nil interface when the item could not be found. Instead, an empty
   interface item was returned. "Find" now works as documented and will return
   a nil interface if the item cannot be found.

11. DBInformation: support added for isc_info_active_tran_count and isc_info_creation_date.
