@@ -1,3 +1,13 @@
+FBINTF Change Log  version                                                 (1.1-2) Tue, 27 Feb 2018 16:51:16 +0000
+
+1. Firebird.pas: {$OBJECTCHECKS OFF} added to file to avoid runtime error when
+   program compiled with -CR command line switch.
+
+2. IServiceManager additions (informational):
+    function getProtocol: TProtocol;
+    function getPortNo: AnsiString;
+
+
 FBINTF Change Log  version                                                 (1.1-1) Tue, 27 Feb 2018 16:51:16 +0000
 
 1. IBUtils.QuoteIdentifierIfNeeded: Add check for space character.
